Amending Procfile and landing page

--- a/public/index.html
+++ b/public/index.html
@@ -30,18 +30,21 @@
                 <h1 class="display-4 fst-italic">Portfolio Projects API</h1>
             </div>
             <div class="col-lg-7 offset-md-1 my-5 px-0">
-                <p class="lead my-3">
+                <p class="my-3">
                     This project serves as a backend API for showcasing my personal portfolio projects. Built with Node.js and Express, it delivers structured data about each project — including title, description, and associated image — through a RESTful endpoint. The API is publicly accessible and is consumed by a static front-end interface to dynamically render project cards.
                 </p>
+                <a href="https://joseenciso.co.uk/" 
+                    class="fst-italic">Click here to see my projects</a>
             </div>
             <div class="col-12">
                 <p class="mt-4">The goal of this project is to demonstrate my ability to:</p>
                 
                 <p class="mt-5 fst-italic">This project reflects my hands-on experience with API development principles and API-first design.</p>
             </div>
+                    
         </div>
 
-        <div class="col-md-10">
+        <div class="col-md-10 my-5">
             <h3 class="pb-4 mb-4 fst-italic border-bottom">From the server to the client</h3>
             <article class="blog-post">
                 <h2 class="display-5 link-body-emphasis mb-1">The goal of this project is to demonstrate my ability to</h2>
@@ -55,8 +58,8 @@
                 <p class="mx-4 fst-italic">This project reflects my hands-on experience with API development principles and API-first design.</p>
             </article>
             <hr>
-            <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">Thecnologies used</h2>
+            <article class="blog-post my-5">
+                <h2 class="display-5 link-body-emphasis mb-1">Technologies used</h2>
                 <div class="col-md-10 offset-md-1 col-lg-8">
                     <p>This are the technologies used for this project.</p>
                     <ul>
@@ -64,12 +67,13 @@
                         <li>Express.js</li>
                         <li>Bootstrap 5</li>
                     </ul>
-                    <p class="fst-italic">This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+                    <a href="https://joseenciso.co.uk/"
+                        class="fst-italic">Click here to see my projects</a>
                 </div>
             </article>                
     </main>
-    <footer>
-
+    <footer class="text-center mt-5 py-3 border-top">
+        <p>&copy; 2025 Jose Enciso — Portfolio API Project</p>
     </footer>
     </div>
 </body>
